--- a/public/download.html
+++ b/public/download.html
@@ -271,14 +271,59 @@
         </div>
 
         <div class="row xenon4" style="margin: 0 -10px !important;">
-            <div class="col-lg-4 col-6 center-col" id="flex-one">
-                <div class="col-lg-9 col-12 center-col modal-body no-bord">
+
+            <div class="col-lg-42 col-6" id="flex-one">
+                <div class="col-lg-9 col-12 modal-body no-bord">
                     <canvas id="chart3"></canvas>
                 </div> 
-                <div class="col-lg-10 col-12 center-col modal-body no-bord">
+                <div class="col-lg-9 col-12 modal-body no-bord">
                     <canvas id="chart4"></canvas>
                 </div> 
             </div>  
+
+            <div class="col-lg-2 sm-display-none">
+
+            </div>
+
+            <div class="col-lg-42 col-md-5 col-12 ticketz">
+                <div class="modal-content" id="modalsend">
+                    <div class="brock">
+                        <div class="modal-header">
+                            <h4 class="modal-title" id="titlelogs2">
+                                Notifications
+                            </h4>
+                            <button type="button" class="close" id="bitcoin-logo2">
+                                <img src="img/partners/alerts.png">
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                                    
+                            <div class="cart-alerts">
+
+                                <div class="alert alert-success alert-dismissible">
+                                    <i class="fas fa-check"></i>
+                                    Sold <strong>Huntington [SAVINGS]</strong>, <br> Balance: $5,249
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
+                                </div>
+                                <div class="alert alert-success alert-dismissible">
+                                    <i class="fas fa-check"></i>
+                                    Sold <strong>Chase Bank [SAVINGS]</strong>, <br> Balance: $5,738
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
+                                </div>
+            
+                                <div class="alert alert-info alert-dismissible">
+                                    <i class="fas fa-check"></i>
+                                    Pay before timer < <strong>5 minutes</strong>, <br>
+                                    <strong>10% discount</strong> for 2 bank logs.
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
+                                </div>
+
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
