--- a/public/home.html
+++ b/public/home.html
@@ -651,6 +651,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
     <script src="js/main/core.home.js"></script>
     <script src="js/main/home.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
