--- a/public/download.html
+++ b/public/download.html
@@ -285,7 +285,7 @@
 
             </div>
 
-            <div class="col-lg-42 col-md-5 col-12 ticketz" id="notifi">
+            <div class="col-lg-42 col-md-5 col-12 ticketz display-none" id="notifi">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
