--- a/public/home.html
+++ b/public/home.html
@@ -36,7 +36,7 @@
             <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#profileModal">
                 <img id="logo" src="img/partners/user.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Dark Web">
+                    <input readonly id="jinaHolder" maxlength="17" value="Home Page">
                     <span id="jinaHolder2">
                         Bank Logins Available
                     </span>
