--- a/public/citi.html
+++ b/public/citi.html
@@ -713,7 +713,7 @@
     <i class="fas fa-angle-up"></i>
 </a>
 
-<div class="modal fade"  id="vpnModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="vpnModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">        
         <div class="modal-content">
             <div class="modal-header">
@@ -722,18 +722,18 @@
             </div>
             <div class="modal-body">
                 <div>
-                    <label>User ID:</label> <br> <p id="the-id"></p>
+                    <label>User ID:</label> <br> <p id="the-id"> Current Status : Not Logged In..</p>
                 </div>
                 <div>
-                    <label id="label-date"></label> <br> <p id="the-date"></p>
+                    <label id="label-date">Contact Info</label> <br> <p id="the-date">email@darkweb.lat | @darklat7</p>
                 </div>
                 <div>
                     <label id="label-ip"></label> <br> <p id="the-ip"></p>
                 </div>
             </div>
             <div class="modal-body" id="first-modal" style="border-top: none !important;">
-                <a class="butn" id="settings" data-bs-toggle="modal" data-bs-target="#profileModal">
-                    View Cart <img src="img/partners/user.png">
+                <a class="butn" id="settings" href="login">
+                    Login Now <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
@@ -816,8 +816,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
-                    Download IT <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
+                    Bank Logins <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
