--- a/public/download.html
+++ b/public/download.html
@@ -1560,37 +1560,32 @@
     <i class="fas fa-angle-up"></i>
 </a>
 
-<div class="modal fade"  id="vpnModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="vpnModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">        
         <div class="modal-content">
             <div class="modal-header">
                 <input readonly  id="jinaHolder3" maxlength="17" value="Balance: $0">
-               
                 <button type="button" class="btn-cloze" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
                 <div>
-                    <label>User ID:</label> <br>
-                    <p id="the-id"></p>
+                    <label>User ID:</label> <br> <p id="the-id"> Current Status : Not Logged In..</p>
                 </div>
                 <div>
-                    <label id="label-date"></label> <br>
-                    <p id="the-date"></p>
+                    <label id="label-date">Contact Info</label> <br> <p id="the-date">email@darkweb.lat | @darklat7</p>
                 </div>
                 <div>
-                    <label id="label-ip"></label> <br>
-                    <p id="the-ip"></p>
+                    <label id="label-ip"></label> <br> <p id="the-ip"></p>
                 </div>
             </div>
             <div class="modal-body" id="first-modal" style="border-top: none !important;">
-                <a class="butn" id="settings" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    View Cart <img src="img/partners/user.png">
+                <a class="butn" id="settings" href="login">
+                    Login Now <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
     </div>   
 </div>
-
 
 <div class="modal fade" id="uploadModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">        
