--- a/public/download.html
+++ b/public/download.html
@@ -285,7 +285,7 @@
 
             </div>
 
-            <div class="col-lg-42 col-md-5 col-12 ticketz display-none" id="notifi">
+            <div class="col-lg-42 col-md-5 col-12 ticketz" id="notifi">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
@@ -1722,7 +1722,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.download.js"></script>
     <script src="js/main/download.js"></script>
-    <script src="js/auth/downloads.js"></script>
+    <script src="js/auth/download.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/download.js"></script>
 </body>
