--- a/public/citi.html
+++ b/public/citi.html
@@ -824,14 +824,14 @@
     </div>
 </div>
 
-    <script src="js/cart/banks.js"></script>
+    <script src="js/cart/bank.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="js/main/core.main.js"></script>
     <script src="js/main/main.js"></script>
     <script src="js/auth/auth.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script>
-    <script src="js/cart/cart.js"></script>
+    <script src="js/cart/add.js"></script>
     <script src="js/rev_slider/jquery.themepunch.revolution.min.js"></script>
 </body>
 </html>
