--- a/public/login.html
+++ b/public/login.html
@@ -189,7 +189,7 @@
                                                         <div id="the-life">
                                                             <img id="the-flag7" />
                                                             <input type="text" class="form-control" id="inputLife" 
-                                                            placeholder="Enter Email / Phone.." autofocus required>
+                                                            placeholder="Email or Phone..." autofocus required>
                                                         </div> <div id="recaptcha-container"></div>
                                                     </div> <hr class="thehr" id="hr">
                                                     <li class="next">
