--- a/public/index.html
+++ b/public/index.html
@@ -538,8 +538,8 @@
 
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="chime">
-            Bank Logs <img src="img/partners/table.png">
+        <a class="butn" id="vpn" href="pnc">
+            PNC Bank <img src="img/partners/pnclogo.png">
         </a>
     </div>
 
