--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -512,7 +512,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 2</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Required/ Tools Needed
                     SSN (Social Security Number) , Name, DOB (Date of Birth)
@@ -527,7 +527,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 3</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Connect your 911 or any Good vpn  to your fullz state.
                     <br> 
@@ -539,7 +539,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 4</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/comp7/boa.jpg" alt="" />
                 <p>
                     We are going to open up bank of america account, <br>
                     so browse their official website : www.bankofamerica.com (http://www.bankofamerica.com/)
@@ -550,7 +550,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 5</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Locate the Savings button at the top, Click on it, then click on Open Account
                 </p>
@@ -560,7 +560,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 6</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Enter the Zip code that came with your Fullz here and click on Go, and then you'll click on "Open Now"
                 </p>
@@ -570,7 +570,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 7</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Check the box for "Are you a Bank of America Online Banking Customer ?" and click on Go to Application
                 </p>
@@ -580,7 +580,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 8</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Click on Continue as our guest
                 </p>
@@ -590,7 +590,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 9</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Enter your Google Voice or Text Now Number, put in the email you created matching your SSN details, enter SSN number
                 </p>
@@ -600,7 +600,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 10</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     At the Employment and Finances section enter like the screenshot above, 
                 </p>
@@ -620,7 +620,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 11</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Check the agreement box and click on Continue
                 </p>
@@ -630,7 +630,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 14</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Do the same thing by checking this agreement box and click on Continue. (They have 3 agreement terms)
                 </p>
@@ -640,7 +640,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 15</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Check last agreement box and click on Continue.
                 </p>
@@ -650,7 +650,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 16</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Confirm the details you are submitting, if everything is correct click on Submit.
                 </p>
@@ -660,7 +660,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 17</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     When submitting the your information it will also make sure by also confirming from their database and your ip so make sure your IP is always intact
                 </p>
@@ -670,7 +670,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 18</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Time to create an Online ID while Boa confirms our SSN information. so click on CREATE ONLINE ID
                 </p>
@@ -680,7 +680,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 19</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Check the agreement box and click Continue.
                 </p>
@@ -690,7 +690,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 20</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Again check the agreement box and click Continue.
                 </p>
@@ -710,7 +710,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 22</h4>
-                <img src="img/bankofamerica/bank-4.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     You will see the below if you follow the process well
                 </p>
@@ -720,7 +720,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 23</h4>
-                <img src="img/comp7/boa.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     Now check the email you used for this account. 
                     and click on confirm ( Note you will receive 3 mails check the one that says CONFIRM EMAIL.)
@@ -741,7 +741,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 26</h4>
-                <img src="img/bankofamerica/bank-5.jpg" alt="" style="display: none"/>
+                <img src="img/partners/tutorial.png" alt="" />
                 <p>
                     You can try and login  but I will prefer you wait till Boa confirms you on the account. 
                     To login just go to  www.bankofamerica.com (http://www.bankofamerica.com/) 
@@ -753,7 +753,7 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Step 27</h4>
-                <img src="img/bankofamerica/bank-5.jpg" alt="" style="display: none"/>
+                <img src="img/partners/good.png" class="tutorial-img">
                 <p>
                     Again make sure the phone number you used can receive code
                 </p>
@@ -763,7 +763,6 @@
         <div class="cd-time-block">
             <div class="cd-time-content">
                 <h4>Last Step</h4>
-                <img src="img/partners/good.png" class="tutorial-img">
                 <p>
                     Done !!! Now the above Bank Open up Method can be used to receive any loan you apply for, 
                     again if you get error along the way means your ip expose you can also rdp for this open up
