--- a/public/huntington.html
+++ b/public/huntington.html
@@ -506,19 +506,11 @@
 
         <div class="cd-time-block">
             <div class="cd-time-content">
-                <img src="img/partners/tutorial.png" class="tutorial-img">
-                <p>
-                    Direct Deposit to Cashapp using Huntington Bank
-                </p>
-            </div>
-        </div>
-
-        <div class="cd-time-block">
-            <div class="cd-time-content">
                 <h4>Step 1</h4>
                 <img src="img/huntington/1.jpg" alt="" />
                 <p>
-                    First of all, connect your SOCKS, RDP or VPN and then login to the
+                    Direct deposit to cashapp. <br>
+                    Connect your SOCKS, RDP or VPN and then login to the
                     hacked bank log account info you bought
                 </p>
             </div>
