--- a/public/pnc.html
+++ b/public/pnc.html
@@ -457,18 +457,10 @@
 
         <div class="cd-time-block">
             <div class="cd-time-content">
-                <img src="img/partners/tutorial.png" class="tutorial-img">
-                <p>
-                    How to link a bank log with coinbase.
-                </p>
-            </div>
-        </div>
-
-        <div class="cd-time-block">
-            <div class="cd-time-content">
                 <h4>Step 1</h4>
                 <img src="img/coinbase/1.jpg" alt="" />
                 <p>
+                    Link bank log with coinbase, 
                     You tap on your profile.
                 </p>
             </div>
