--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -514,12 +514,8 @@
                 <h4>Step 2</h4>
                 <img src="img/partners/tutorial.png" alt="" />
                 <p>
-                    Required/ Tools Needed
-                    SSN (Social Security Number) , Name, DOB (Date of Birth)
-                    Address information. 911.re or any Good VPN 
-                    Create an email matching your SSN details 
-                    Front and back of  Drivers License/Passport/State Identification/Military Identification
-                    USA Phone Number (Google Voice)
+                    Required/ Tools Needed SSN (Social Security Number) , Name, DOB (Date of Birth) Address information. 911.re or any Good VPN  Create an email matching your SSN details 
+                    Front and back of  Drivers License/Passport/State Identification/Military Identification USA Phone Number (Google Voice)
                 </p>
             </div>
         </div>
@@ -773,7 +769,6 @@
             </div>
         </div>
 
-
     </div>
 
     <div class="opacity-full-dark bg-extra-dark-gray"> </div>
@@ -827,9 +822,9 @@
                     <label id="label-ip"></label> <br> <p id="the-ip"></p>
                 </div>
             </div>
-            <div class="modal-body" id="first-modal" style="border-top: none !important;">
-                <a class="butn" id="settings" href="login">
-                    Login Now <img src="img/partners/user.png">
+            <div class="modal-body" id="first-modal">
+                <a class="butn" id="settings" href="mailto: email@darkweb.lat" target="_blank">
+                    Send Email <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
