--- a/public/chime.html
+++ b/public/chime.html
@@ -20,12 +20,12 @@
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/styles.css" rel="stylesheet" id="colors">
     <link href="css/plugins/apps.css" rel="stylesheet">
-    <style>
+    <!-- <style>
         .borderp {
             border-radius: 50% !important;
             border: 1.4px solid rgba(255, 255, 255, 0.4) !important;
         }
-    </style>
+    </style> -->
 </head>
 <body id="thebodyz">
     <div id="preloader">
@@ -638,9 +638,9 @@
                     <label id="label-ip"></label> <br> <p id="the-ip"></p>
                 </div>
             </div>
-            <div class="modal-body" id="first-modal" style="border-top: none !important;">
-                <a class="butn" id="settings" href="login">
-                    Login Now <img src="img/partners/user.png">
+            <div class="modal-body" id="first-modal">
+                <a class="butn" id="settings" href="mailto: email@darkweb.lat" target="_blank">
+                    Send Email <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
