--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Dark Web">
                     <span id="jinaHolder2">
-                        Bank Logins Available
+                        Bank Logs Available
                     </span>
                 </div>
             </a>
@@ -517,7 +517,7 @@
                         </div>
                         <div class="modal-body">
                             <canvas id="chart1" class="lg-display-none"></canvas>
-                            <hr class="nohr lg-display-none">
+                            <hr class="nohr lg-display-none" style="margin-top: 10px !important;">
                             <canvas id="chart4"></canvas>
                         </div> 
                     </div>
@@ -528,10 +528,6 @@
         </div>
     </div>
 </section>
-
-
-
-
 
 
 
