--- a/public/home.html
+++ b/public/home.html
@@ -517,7 +517,7 @@
                         </div>
                         <div class="modal-body">
                             <canvas id="chart1" class="lg-display-none"></canvas>
-                            <hr class="nohr lg-display-none" style="margin-top: 10px !important;">
+                            <hr class="nohr lg-display-none" style="margin: 5px auto !important; opacity: 0 !important;">
                             <canvas id="chart4"></canvas>
                         </div> 
                     </div>
