--- a/public/chime.html
+++ b/public/chime.html
@@ -723,8 +723,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
-                    Bank Logins <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('invoice')">
+                    Get Invoice <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
