--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -751,8 +751,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
-                    Download IT <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('invoice')">
+                    Get Invoice <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
