--- a/public/truist.html
+++ b/public/truist.html
@@ -921,7 +921,7 @@
             </div>    
             <div id="invoice-footer">
                 <button class="butn" id="showtoasts" onclick="window.location.assign('invoice')">
-                    Get Invoice <i class="fas fa-angle-down"></i>
+                    Mail Invoice <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
