--- a/public/invoice.html
+++ b/public/invoice.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title> Get Invoice </title>
+    <title> Mail Invoice </title>
     <link rel="shortcut icon" id="nav1" href="img/logos/logo7.png">
     <link rel="apple-touch-icon" id="nav2" href="img/logos/logo7.png">
     <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo7.png">
@@ -35,7 +35,7 @@
             <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#profileModal">
                 <img id="logo" src="img/partners/user.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Get Invoice">
+                    <input readonly id="jinaHolder" maxlength="17" value="Mail Invoice">
                     <span id="jinaHolder2">
                         Burner Email / Phone
                     </span>
@@ -305,8 +305,8 @@
                     </div>
                 </div>    
                 <div id="invoice-footer">
-                    <button class="butn" id="showtoasts" onclick="window.location.assign('invoice')">
-                        Get Invoice <i class="fas fa-angle-down"></i>
+                    <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
+                        Download IT <i class="fas fa-angle-down"></i>
                     </button>
                 </div>
             </div>
