--- a/public/chime.html
+++ b/public/chime.html
@@ -724,7 +724,7 @@
             </div>    
             <div id="invoice-footer">
                 <button class="butn" id="showtoasts" onclick="window.location.assign('invoice')">
-                    Mail Invoice <i class="fas fa-angle-down"></i>
+                    Email Invoice <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
