--- a/public/invoice.html
+++ b/public/invoice.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title> Mail Invoice </title>
+    <title> Email Invoice </title>
     <link rel="shortcut icon" id="nav1" href="img/logos/logo7.png">
     <link rel="apple-touch-icon" id="nav2" href="img/logos/logo7.png">
     <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo7.png">
@@ -35,7 +35,7 @@
             <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#profileModal">
                 <img id="logo" src="img/partners/user.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Mail Invoice">
+                    <input readonly id="jinaHolder" maxlength="17" value="Email Invoice">
                     <span id="jinaHolder2">
                         Burner Email / Phone
                     </span>
@@ -176,12 +176,14 @@
                                         <div id="my-invoice">
                                             <div class="text-center section-heading">
                                                 <p id="would">
-                                                    A login link will be sent <br> via 
-                                                    <span id="in-span">Email</span> or <span id="in-span">SMS</span>
+                                                    Banklog files can be sent <br>
+                                                    <!-- A login link will be sent <br>  -->
+                                                    via <span id="in-span">Email</span> or <span id="in-span">SMS</span>
                                                 </p> <hr class="nohr">
 
                                                 <p id="wild">
-                                                    Use the link to login here.
+                                                    Link a burner email below.
+                                                    <!-- Use the link to login here. -->
                                                 </p> <hr class="nohr">
 
                                                 <form  id="the-form" onsubmit="signUpFunction()">
