--- a/public/invoice.html
+++ b/public/invoice.html
@@ -176,13 +176,16 @@
                                         <div id="my-invoice">
                                             <div class="text-center section-heading">
                                                 <p id="would">
-                                                    Banklog files can be sent <br>
+                                                    Bank logs can be sent via <br>
+                                                    <span id="in-span">Email</span> or <span id="in-span">SMS</span> as a link,
+                                                    <!-- Banklog files can be sent <br> -->
                                                     <!-- A login link will be sent <br>  -->
-                                                    via <span id="in-span">Email</span> or <span id="in-span">SMS</span>
+                                                    <!-- via <span id="in-span">Email</span> or <span id="in-span">SMS</span> -->
                                                 </p> <hr class="nohr">
 
                                                 <p id="wild">
-                                                    Link a burner email below.
+                                                    Enter a valid email below.
+                                                    <!-- Link a burner email below. -->
                                                     <!-- Use the link to login here. -->
                                                 </p> <hr class="nohr">
 
