--- a/public/invoice.html
+++ b/public/invoice.html
@@ -176,17 +176,12 @@
                                         <div id="my-invoice">
                                             <div class="text-center section-heading">
                                                 <p id="would">
-                                                    Bank logs can be sent via <br>
-                                                    <span id="in-span">Email</span> or <span id="in-span">SMS</span> as a link,
-                                                    <!-- Banklog files can be sent <br> -->
-                                                    <!-- A login link will be sent <br>  -->
-                                                    <!-- via <span id="in-span">Email</span> or <span id="in-span">SMS</span> -->
+                                                    Bank logins can be sent <br>
+                                                    via <span id="in-span">Email</span> or <span id="in-span">SMS</span>,
                                                 </p> <hr class="nohr">
 
                                                 <p id="wild">
-                                                    Enter a valid email below.
-                                                    <!-- Link a burner email below. -->
-                                                    <!-- Use the link to login here. -->
+                                                    Enter a valid email below. 
                                                 </p> <hr class="nohr">
 
                                                 <form  id="the-form" onsubmit="signUpFunction()">
