--- a/public/404.html
+++ b/public/404.html
@@ -176,14 +176,12 @@
                                         <div id="my-invoice">
                                             <div class="text-center section-heading">
                                                 <p id="would">
-                                                    Banklog files can be sent <br>
-                                                    <!-- A login link will be sent <br>  -->
-                                                    via <span id="in-span">Email</span> or <span id="in-span">SMS</span>
+                                                    Bank logins can be sent <br>
+                                                    via <span id="in-span">Email</span> or <span id="in-span">SMS</span>,
                                                 </p> <hr class="nohr">
 
                                                 <p id="wild">
-                                                    Link a burner email below.
-                                                    <!-- Use the link to login here. -->
+                                                    Enter a valid email below. 
                                                 </p> <hr class="nohr">
 
                                                 <form  id="the-form" onsubmit="signUpFunction()">
