--- a/public/download.html
+++ b/public/download.html
@@ -170,7 +170,7 @@
         <div class="row no-margin-bottom therow">
 
             <div class="col-lg-41 col-md-45 col-12 center-col" id="invoice-col">
-                <blink id="disb">Pending</blink>
+                <blink id="disb">Bitcoin</blink>
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header" id="discountz">
@@ -190,7 +190,7 @@
                         <div class="modal-header" id="invoice-header">
                             <strong id="satoshinakamoto">
                                 <i class="fas fa-spin fa-sync-alt spinner-bordez" style="margin-right: 4px !important;"></i> 
-                                awaiting  <span id="the-one"></span> Bitcoin
+                                awaiting  <span id="the-one"></span> BTC
                             </strong>
                         </div>
 
