--- a/public/download.html
+++ b/public/download.html
@@ -19,7 +19,7 @@
 
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
-    <link href="css/plugins/apps.css" rel="stylesheet">
+    <link href="css/plugins/app.css" rel="stylesheet">   
     <link href="css/plugins/download.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/light.css" />
@@ -189,8 +189,8 @@
                         </div>
                         <div class="modal-header" id="invoice-header">
                             <strong id="satoshinakamoto">
-                                <i class="fas fa-spin fa-sync-alt spinner-bordez" style="margin-right: 4px !important;"></i> 
-                                awaiting  <span id="the-one"></span> BTC
+                                <i class="fas fa-spin fa-sync-alt spinner-bordez" style="margin-right: 3px !important;"></i> 
+                                awaiting  <span id="the-one"></span> Bitcoin
                             </strong>
                         </div>
 
