--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/styles-2.css" rel="stylesheet" id="colors">
-    <link href="css/plugins/apps.css" rel="stylesheet">
+    <link href="css/plugins/app.css" rel="stylesheet">   
 </head>
 <body id="thebodyz">
     <div id="preloader">
