--- a/public/chime.html
+++ b/public/chime.html
@@ -19,13 +19,7 @@
 
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/styles.css" rel="stylesheet" id="colors">
-    <link href="css/plugins/apps.css" rel="stylesheet">
-    <!-- <style>
-        .borderp {
-            border-radius: 50% !important;
-            border: 1.4px solid rgba(255, 255, 255, 0.4) !important;
-        }
-    </style> -->
+    <link href="css/plugins/app.css" rel="stylesheet">   
 </head>
 <body id="thebodyz">
     <div id="preloader">
