--- a/public/chime.html
+++ b/public/chime.html
@@ -679,8 +679,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
-                    Download IT <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
+                    Email Login <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
