--- a/public/login.html
+++ b/public/login.html
@@ -186,7 +186,7 @@
                                                 <form  id="the-form" onsubmit="signUpFunction()">
                                                     <div class="form-group col-md-12" id="form">
                                                         <div id="the-life">
-                                                            <img id="the-flag7" />
+                                                            <img id="the-flag7" src="img/partners/user.png" />
                                                             <input type="text" class="form-control" id="inputLife" 
                                                             placeholder="Email or Phone..." autofocus required>
                                                         </div> <div id="recaptcha-container"></div>
@@ -313,6 +313,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.login.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
     <script src="js/cart/login.js"></script>
