--- a/public/download.html
+++ b/public/download.html
@@ -190,7 +190,7 @@
                         <div class="modal-header" id="invoice-header">
                             <strong id="satoshinakamoto">
                                 <i class="fas fa-spin fa-sync-alt spinner-bordez" style="margin-right: 3px !important;"></i> 
-                                awaiting  <span id="the-one"></span> Bitcoin
+                                awaiting  <span id="the-one"></span> BTC
                             </strong>
                         </div>
 
