--- a/public/index.html
+++ b/public/index.html
@@ -633,7 +633,7 @@
             </div>    
             <div id="invoice-footer">
                 <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
-                    Email Login <i class="fas fa-angle-down"></i>
+                    Email Invoice <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
