--- a/public/pnc.html
+++ b/public/pnc.html
@@ -634,13 +634,12 @@
             </div>    
             <div id="invoice-footer">
                 <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
-                    Email Login <i class="fas fa-angle-down"></i>
+                    Email Invoice <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
     </div>
 </div>
-
 
     <script src="js/cart/banks.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
