--- a/public/citi.html
+++ b/public/citi.html
@@ -781,8 +781,8 @@
                 </div>
             </div>    
             <div id="invoice-footer">
-                <button class="butn" id="showtoasts" onclick="window.location.assign('login')">
-                    Email Invoice <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
+                    Download IT <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
